syntax = "proto3";

package decryptv1beta1;

option go_package = "github.com/grafana/grafana/apps/secret/decrypt/v1beta1;decryptv1beta1";

message SecureValueDecryptRequest {
    // The stack_id or org_id.
    string namespace = 1;

    // A list of secure value names to decrypt.
    repeated string names = 2;
}

message SecureValueDecryptResponseCollection {
    // A map of secure value names and their decrypted values.
    // The value will be an error message if the requestor does not have permissions to read it, or if the value does not exist.
    // It will never return a 404 Not Found to avoid scanning of valid secure values.
    map<string, Result> decrypted_values = 1;
}

message Result {
    oneof result {
        string value = 1;
        string error_message = 2;
    }
}

service SecureValueDecrypter {
    // Decrypts a list of secure values and returns them as a map<name, decrypted_value>.
    rpc DecryptSecureValues(SecureValueDecryptRequest) returns (SecureValueDecryptResponseCollection);
}
